--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">DeliverytekaApp</string>
-    <string name="spaced_ruble"> руб.</string>
+    <string name="spaced_ruble"> руб</string>
     <string name="manufacture">-Изготовитель: %s</string>
-    <string name="dosage">-Капсулы: %s x %s</string>
+    <string name="dosage">-Количество: %s x %s</string>
 </resources>
